@@ -1,4 +1,4 @@
-## Interface: 100000
+## Interface: 30400
 ## Version: v10.0.0
 ## LoadOnDemand: 1
 ## Title: Lib: DataBrokerIcon-1.0
